2015-03-23  Germán Arias <germanandre@gmx.es>

	* Source/win32/WIN32Server.m (-windowEventProc:, -process_mouse_event:):
	Add code to handle the case when the mouse leave the window, move over
	a nonclient area, update the cursor or when the user open a
	contextual menu. Also handle the first mouse movement inside the
	window and save the cursor if we should preserve it between different
	windows. Sometimes there is a problem with the cursor if the user
	open a contextual menu after resize the window. But this seems
	other issue.

2015-03-22  Fred Kiefer <FredKiefer@gmx.de>

	* Source/x11/XGServerEvent.m (-processEvent:): Reenable Richard's
	frontend based expose code.
	* Source/x11/XGServerWindow.m (-window::::, -_checkStyle:): Don't
	use CWBackPixel, as the window background may be different.

2015-03-21  Fred Kiefer <FredKiefer@gmx.de>

	* Headers/x11/XGGeneric.h
	* Source/x11/XGServerWindow.m: Correct name for atom
	net_wm_state_modal_atom. Use this atom to try to set the sate for
	dialog windows to modal.

2015-02-27  Germán Arias <germanandre@gmx.es>

	* Source/cairo/CairoContext.m (-flushGraphics:):
	* Source/cairo/Win32CairoSurface.m (-initWithDevice:): Apply fix
	from TestPlant branch to solve problem with windows with backing
	store type NSBackingStoreRetained, which are not displayed correclty
	on MS Windows. With this fix those windows are displayed as
	buffered windows.
	* Source/win32/WIN32Server.m (-setWindowdevice:forContext:): The
	windows with autodisplay set to NO aren't displayed correctly on
	Windows, no matter the backing store type used. And trying to
	redisplay these windows here in the server not takes effect. So if
	the window have set autodisplay to NO, we change it to YES before
	create the window. This problem affects the tooltips, but this
	solution is different to the one used in the TestPlant branch.
	Because that solution involves changes in the side of GUI.

2014-10-25  Fred Kiefer <FredKiefer@gmx.de>
